CHANGELOG RoundCube Webmail
---------------------------

2008/06/11 (alec)
----------
- Don't call expunge and don't remove message row after message move 
  if flag_for_deletion is set to true (#1485002)

2008/06/08 (alec)
----------
- Added option to disable autocompletion from selected LDAP address books (#1484922)

2008/06/07 (thomasb)
----------
- Cleaned up localization names. Now named with lang_COUNTRY according to ISO 639-1/3166-1
- Updated Catala localization

2008/06/06 (robin)
----------
- Add option to log successful logins

2008/06/06 (alec)
----------
- TLS support in LDAP connections: 'use_tls' property (#1485104)

2008/06/05 (alec)
----------
- Fix removing messages from search set after deleting them (#1485106)

2008/06/03 (alec)
----------
- imap.inc: Fixed iil_MultLine(): use iil_ReadBytes() instead of iil_ReadLine()
- imap.inc: Fixed iil_C_FetchStructureString() to handle many 
  literal strings in response (#1484969)
- imap.inc: Removed hardcoded data size in iil_ReadLine()

2008/05/30 (alec)
----------
- Support for subfolders in default/protected folders (#1484665)
- Disallowed delimiter in folder name (#1484803)
- Support " and \ in folder names
- Escape \ in login (#1484614)

2008/05/29 (thomasb)
----------
- Better HTML sanitization with the DOM-based washtml script (#1484701)

2008/05/29 (alec)
----------
- Polish localization folder renamed to pl_PL

2008/05/28 (alec)
----------
- Fixed sorting of folders with non-ascii characters

2008/05/21 (alec)
----------
- Localized pagetitle in Settings and Address Book

2008/05/19 (alec)
----------
- Fixed Mysql DDL for default identities creation (#1485070)

2008/05/16 (alec)
----------
- In Preferences added possibility to configure 'read_when_deleted',
  'mdn_requests', 'flag_for_deletion' options

2008/05/15 (thomasb)
----------
- Make IMAP auth type configurable (#1483825)
- Fix empty values with FROM_UNIXTIME() in rcube_mdb2 (#1485055)

2008/05/15 (alec)
----------